# umfrager

./: .env  Cargo.toml  Dockerfile  survey.db
migrations/2023-07-22-132246_create_gamenames/: down.sql  up.sql
migrations/2023-07-22-140353_create_usr/: down.sql  up.sql
migrations/2023-07-22-140613_create_usrpoints/: down.sql  up.sql
src/: actions.rs  home.rs  lib.rs  main.rs  models.rs  results.rs  schema.rs
static/: default.css  home.html  results.html  thanks.html
