[package]
name = "umfrager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
diesel = { version = "2", features = ["sqlite", "r2d2"] }
dotenv = "0.15"
env_logger = "0.10"
uuid = { version = "1", features = ["v4", "serde"] }
